Fix text overflow issue in Firefox

--- a/static/toc.less
+++ b/static/toc.less
@@ -108,6 +108,7 @@
 		li {
 			margin: @gutter/3 0;
 			a {
+				white-space: nowrap;
 				&:before {
 					display: inline-flex;
 					vertical-align: middle;
